--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,10 @@
 # Publish module to PowerShell Gallery
-name: CI
+name: Release
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    tags: "*"
+  # Triggers the workflow on release
+  release
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,7 +27,7 @@ jobs:
       # Publish module
       - name: Publish PowerShell Module
         # You may pin to the exact commit or the version.
-        uses: pcgeek86/publish-powershell-module-action@v20
+        uses: Akaizoku/publish-powershell-module-action@a1e0778a4a8ec283695a1d815461011e91c8319c
         with:
           # The NuGet API Key for PowerShell Gallery, with permission to push this module.
           NuGetApiKey: ${{ secrets.PS_GALLERY_KEY }}
