--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Release
 # Controls when the workflow will run
 on:
   # Triggers the workflow on release
-  release
+  release:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
