--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        with:
-          # Create subdirectory for publish-powershell-module-action
-          path: 'module'
+      - name: Check-out
+        uses: actions/checkout@v2
 
       # Publish module
       - name: Publish PowerShell Module
