--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       # Publish module
       - name: Publish PowerShell Module
         # You may pin to the exact commit or the version.
-        uses: Akaizoku/publish-powershell-module-action@master
+        uses: pcgeek86/publish-powershell-module-action@v20
         with:
           # The NuGet API Key for PowerShell Gallery, with permission to push this module.
           NuGetApiKey: ${{ secrets.PS_GALLERY_KEY }}
